--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
       <meta charset="UTF-8"/>
-	  <title> Le skate </title>
+	  <title>SimFan </title>
 	  <link rel="stylesheet" type="text/css" href="autres/styl.css">
 	</head>
 
