--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 				</br>
 				</br>
 				<ul>
-					<li><a href="index.html">L'Histoire du skateboard</a>
+					<li><a href="index.html">Microsoft Flight Simulator 2020</a>
 						<ul>
 							<li> <a href="#fb1">Le surf et les années 50</a> </li>
 							<li> <a href="#fb2">Les années 60 : la popularisation du skate</a> </li>
