--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
 							<li> <a href="#fb6">Le 21ème siècle: le renouveau du skate</a></li>
 						</ul>
 					</li>
-					<li><a href="autres/partie2.html">Compostion et ambassadeurs</a></li>
-					<li><a href="autres/partie3.html">Le skate dans la mode</a></li>
+					<li><a href="autres/partie2.html">Euro Truck Simulator 2 ~ Multijoueurs</a></li>
+					<!--<li><a href="autres/partie3.html"></a></li>--> 
 				</ul>
 			</nav>
 			</br>
