--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
 				<ul>
 					<li><a href="index.html">Microsoft Flight Simulator 2020</a>
 						<ul>
-							<li> <a href="#fb1">Le surf et les années 50</a> </li>
-							<li> <a href="#fb2">Les années 60 : la popularisation du skate</a> </li>
+							<li> <a href="#fb1"> Airbus A320 </a> </li>
+							<li> <a href="#fb2"> Airbus A330 </a> </li>
 							<li> <a href="#fb3">Les années 70 : une mode ephemere ?</a> </li>
 							<li> <a href="#fb4">Les années 80 : la révolution des tricks</a></li>
 							<li> <a href="#fb5">Les années 90: le skate moderne</a></li>
@@ -34,7 +34,7 @@
 						</ul>
 					</li>
 					<li><a href="autres/partie2.html">Euro Truck Simulator 2 ~ Multijoueurs</a></li>
-					<!--<li><a href="autres/partie3.html"></a></li>--> 
+					<!--<li><a href="autres/partie3.html"></a></li>-->
 				</ul>
 			</nav>
 			</br>
