--- a/index.html
+++ b/index.html
@@ -2,11 +2,40 @@
 <html>
 	<head>
       <meta charset="UTF-8"/>
-	  <title>SimFan </title>
-	  <link rel="stylesheet" type="text/css" href="autres/styl.css">
+			<meta http-equiv= "X-UA-Compatible" content= " IE=edge">
+	  	<title> SimFan </title>
+			<meta name = "description" content="">
+			<meta name="viewport" content="width = deice-width, initial-scale=1">
+
+	  	<link rel="stylesheet" type="text/css" href="autres/styles.css">
 	</head>
 
-	<body background="https://images-na.ssl-images-amazon.com/images/I/81baWALHc8L._SY355_.jpg">
+	<body>
+
+		<header>
+			<img class ="logo" src="images/logo.png" alt="logo">
+			<nav>
+				<ul class="nav_links">
+					<li>
+						<center>
+							<script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
+							<lottie-player src="https://assets6.lottiefiles.com/packages/lf20_jhu1lqdz.json"  background="transparent"  speed="1"  style="width: 100px; height: 100px;"  loop autoplay></lottie-player>
+						</center>
+						<a href="index.html"> Microsoft Flight Simulator 2020</a>
+					</li>
+					
+					<li>
+						<center>
+							<script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
+							<lottie-player src="https://assets7.lottiefiles.com/private_files/lf30_bx07iy2i.json"  background="transparent"  speed="1"  style="width: 100px; height: 100px;"  loop autoplay></lottie-player>
+						</center>
+						<a href="autres/partie2.html">Euro Truck Simulator 2 Multijoueurs</a>
+					</li>
+				</ul>
+			</nav>
+			<a class="Rej" href="https://www.youtube.com/channel/UCs2lh1G6uIA3iFZa71OjotQ"><button>Nous rejoindre</button></a>
+		</header>
+		<!--
 		<div class='imageban'>
 			<nav>
 				</br>
@@ -34,7 +63,7 @@
 						</ul>
 					</li>
 					<li><a href="autres/partie2.html">Euro Truck Simulator 2 ~ Multijoueurs</a></li>
-					<!--<li><a href="autres/partie3.html"></a></li>-->
+					<a href="autres/partie3.html"></a></li>-->
 				</ul>
 			</nav>
 			</br>
@@ -55,6 +84,8 @@
 			<h2 id='fb1'> Le surf et les années 50 </h2>
 		</center>
 		<p>
+			<script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
+			<lottie-player src="https://assets6.lottiefiles.com/packages/lf20_jhu1lqdz.json"  background="transparent"  speed="1"  style="width: 300px; height: 300px;"  loop autoplay></lottie-player>
 			Dans les années 50 des surfeurs en manque de vagues décident de transferer le feeling de rider des vagues dans les rues. Ce mouvement débute principalement en Californie et à Hawaii à l'aide de petites planches de skate munies de roues. C'est la marque humco qui se charge de commercialisé les premiers skateboards de l'histoire. Ces planches à roulette prennent de plus en plus d'importances dans la société de l'époque au début des trentes glorieuses.
 		</p>
 	</br>
