--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
 	<body>
 
 		<header>
-			<img class ="logo" src="images/logo.png" alt="logo">
+			<img class ="logo" src="images/bann.png" alt="logo">
 			<nav>
 				<ul class="nav_links">
 					<li>
 						<center>
 							<script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
-							<lottie-player src="https://assets6.lottiefiles.com/packages/lf20_jhu1lqdz.json"  background="transparent"  speed="1"  style="width: 100px; height: 100px;"  loop autoplay></lottie-player>
+							<lottie-player src="https://assets6.lottiefiles.com/packages/lf20_jhu1lqdz.json"  background="transparent"  speed="1"  style="width: 200px; height: 200px;"  loop autoplay></lottie-player>
 						</center>
 						<a href="index.html"> Microsoft Flight Simulator 2020</a>
 					</li>
@@ -27,7 +27,7 @@
 					<li>
 						<center>
 							<script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
-							<lottie-player src="https://assets7.lottiefiles.com/private_files/lf30_bx07iy2i.json"  background="transparent"  speed="1"  style="width: 100px; height: 100px;"  loop autoplay></lottie-player>
+							<lottie-player src="https://assets7.lottiefiles.com/private_files/lf30_bx07iy2i.json"  background="transparent"  speed="1"  style="width: 200px; height: 200px;"  loop autoplay></lottie-player>
 						</center>
 						<a href="autres/partie2.html">Euro Truck Simulator 2 Multijoueurs</a>
 					</li>
