--- a/index.html
+++ b/index.html
@@ -107,6 +107,7 @@
 	</br>
 	</br>
 	</br>
+	<nav>
 		<div id="pied">
 			<p class='piedG'>
 				<a href='https://twitter.com/floIMPR' target="_blank"><IMG src="images/twitter.png" WIDTH= 50 HEIGHT= 35 /></a>
@@ -118,7 +119,7 @@
 
 			<center>
 				<p>
-					<a href="#top"><IMG id='imgf'src="images/fleche.png" WIDTH= 80 HEIGHT= 80 /></a>
+					<a href="#top"><IMG class='logo'src="images/fleche.png" WIDTH= 80 HEIGHT= 80 /></a>
 				</p>
 			</center>
 
@@ -127,5 +128,6 @@
 				<a href='autres/album.html'><IMG src="images/the3.jpg" WIDTH= 110 HEIGHT= 65 /></a>
 			</p>
 		</div>
+	</nav>
 </body>
 </html>
