--- a/index.html
+++ b/index.html
@@ -108,6 +108,7 @@
 	</br>
 	</br>
 	<nav>
+		<ul class="nav_links">
 		<div id="pied">
 			<p class='piedG'>
 				<a href='https://twitter.com/floIMPR' target="_blank"><IMG src="images/twitter.png" WIDTH= 50 HEIGHT= 35 /></a>
@@ -128,6 +129,7 @@
 				<a href='autres/album.html'><IMG src="images/the3.jpg" WIDTH= 110 HEIGHT= 65 /></a>
 			</p>
 		</div>
+		</ul>	
 	</nav>
 </body>
 </html>
