--- a/index.html
+++ b/index.html
@@ -124,10 +124,10 @@
 				</p>
 			</center>
 			<li>
-				<p class='piedD'>
+				<button>
 					Mon album photo
 				<a href='autres/album.html'><IMG src="images/the3.jpg" WIDTH= 110 HEIGHT= 65 /></a>
-				</p>
+				</button>
 			</li>	
 		</div>
 		</ul>	
