--- a/index.html
+++ b/index.html
@@ -22,6 +22,15 @@
 							<lottie-player src="https://assets6.lottiefiles.com/packages/lf20_jhu1lqdz.json"  background="transparent"  speed="1"  style="width: 200px; height: 200px;"  loop autoplay></lottie-player>
 						</center>
 						<a href="index.html"> Microsoft Flight Simulator 2020</a>
+						<ul>
+							<li> <a href="#fb1"> Airbus A320 </a> </li>
+							<li> <a href="#fb2"> Airbus A330 </a> </li>
+							<li> <a href="#fb3">Les années 70 : une mode ephemere ?</a> </li>
+							<li> <a href="#fb4">Les années 80 : la révolution des tricks</a></li>
+							<li> <a href="#fb5">Les années 90: le skate moderne</a></li>
+							<li> <a href="#fb6">Le 21ème siècle: le renouveau du skate</a></li>
+						</ul>
+
 					</li>
 					
 					<li>
@@ -80,34 +89,7 @@
 	</br>
 	</br>
 	</br>
-		<center>
-			<h2 id='fb1'> Le surf et les années 50 </h2>
-		</center>
-		<p>
-			Dans les années 50 des surfeurs en manque de vagues décident de transferer le feeling de rider des vagues dans les rues. Ce mouvement débute principalement en Californie et à Hawaii à l'aide de petites planches de skate munies de roues. C'est la marque humco qui se charge de commercialisé les premiers skateboards de l'histoire. Ces planches à roulette prennent de plus en plus d'importances dans la société de l'époque au début des trentes glorieuses.
-		</p>
-	</br>
-	</br>
-		<p class="flote">
-			<IMG src="images\60.jpg" WIDTH= 400 HEIGHT= 380 >
-		</p>
-	</br>
-	</br>
-	</br>
-	</br>
-	</br>
-	</br>
-	</br>
 	
-	</br>
-	</br>
-	</br>
-	</br>
-	</br>
-	</br>
-	</br>
-	</br>
-	<nav>
 		<ul class="nav_links">
 		<div id="pied">
 			<p class='piedG'>
