--- a/index.html
+++ b/index.html
@@ -25,10 +25,6 @@
 						<ul>
 							<li> <a href="#fb1"> Airbus A320 </a> </li>
 							<li> <a href="#fb2"> Airbus A330 </a> </li>
-							<li> <a href="#fb3">Les années 70 : une mode ephemere ?</a> </li>
-							<li> <a href="#fb4">Les années 80 : la révolution des tricks</a></li>
-							<li> <a href="#fb5">Les années 90: le skate moderne</a></li>
-							<li> <a href="#fb6">Le 21ème siècle: le renouveau du skate</a></li>
 						</ul>
 
 					</li>
@@ -72,11 +68,11 @@
 						</ul>
 					</li>
 					<li><a href="autres/partie2.html">Euro Truck Simulator 2 ~ Multijoueurs</a></li>
-					<a href="autres/partie3.html"></a></li>-->
+					<a href="autres/partie3.html"></a></li>
 				</ul>
 			</nav>
 			</br>
-	    </div>
+	    </div>-->
 	</br>
 	</br>
 	</br>
