--- a/index.html
+++ b/index.html
@@ -6,14 +6,13 @@
 	  	<title> SimFan </title>
 			<meta name = "description" content="">
 			<meta name="viewport" content="width = deice-width, initial-scale=1">
-
-	  	<link rel="stylesheet" type="text/css" href="autres/styles.css">
+	  	<link rel="stylesheet" type="text/css" href="autres\styles.css">
 	</head>
 
 	<body>
 
 		<header>
-			<img class ="logo" src="images/bann.png" alt="logo">
+			<img class ="logo" src="images/logo.png" alt="logo">
 			<nav>
 				<ul class="nav_links">
 					
@@ -40,10 +39,10 @@
 							<lottie-player src="https://assets7.lottiefiles.com/private_files/lf30_bx07iy2i.json"  background="transparent"  speed="1"  style="width: 200px; height: 200px;"  loop autoplay></lottie-player>
 						</center>
 						<li>
-							<a href="autres/partie2.html">Euro Truck Simulator 2 Multijoueurs</a>
+							<a href="autres/partie2.html">Euro Truck Simulator 2 Multiplayers </a>
 							<ul>
-								<li> <a href="#fb1"> Airbus A320 </a> </li>
-								<li> <a href="#fb2"> Airbus A330 </a> </li>
+								<li> <a href="#fb1"> Our company </a> </li>
+								<li> <a href="#fb2"> Our travels </a> </li>
 							</ul>
 						</li>
 				</ul>
@@ -79,7 +78,7 @@
 				</ul>
 			</nav>
 			</br>
-	    </div>-->
+	    </div>
 	</br>
 	</br>
 	</br>
@@ -116,6 +115,6 @@
 			</li>	
 		</div>
 		</ul>	
-	</nav>
+	-->
 </body>
 </html>
