--- a/autres/partie2.html
+++ b/autres/partie2.html
@@ -44,13 +44,13 @@
                     <li>
                         <a href="../autres/partie2.html">Euro Truck Simulator 2 Multijoueurs</a>
                         <ul>
-                            <li> <a href="#fb1"> Airbus A320 </a> </li>
-                            <li> <a href="#fb2"> Airbus A330 </a> </li>
+                            <li> <a href="#fb1"> Our company </a> </li>
+                            <li> <a href="#fb2"> Our travel </a> </li>
                         </ul>
                     </li>
                  </ul>
             </nav>
-        	<a class="Rej" href="https://www.youtube.com/channel/UCs2lh1G6uIA3iFZa71OjotQ"><button>Nous rejoindre</button></a>
+        	<a class="Rej" href="https://www.youtube.com/channel/UCs2lh1G6uIA3iFZa71OjotQ" target="_blank"><button>Follow us</button></a>
 		</header>
         
         <script src="" async defer></script>
