--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 						</li>
 				</ul>
 			</nav>
-			<a class="Rej" href="https://www.youtube.com/channel/UCs2lh1G6uIA3iFZa71OjotQ"><button>Nous rejoindre</button></a>
+        	<a class="Rej" href="https://www.youtube.com/channel/UCs2lh1G6uIA3iFZa71OjotQ" target="_blank"><button>Follow us</button></a>
 		</header>
 		<!--
 		<div class='imageban'>
