--- a/autres/partie2.html
+++ b/autres/partie2.html
@@ -15,7 +15,7 @@
     <body>
 
         <header>
-            <img class ="logo" src="../images/logo.png" alt="logo">
+			<a class="logo" href="../autres/Us.html"><img class="logo" src="../images/logo.png" /></a>
             <nav>
                 <ul class="nav_links">
                         
