--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	<body>
 
 		<header>
-			<img class ="logo" src="images/logo.png" alt="logo">
+			<a class="logo" href="../autres/Us.html"><img class="logo" src="../images/logo.png" /></a>
 			<nav>
 				<ul class="nav_links">
 					
@@ -39,7 +39,7 @@
 							<lottie-player src="https://assets7.lottiefiles.com/private_files/lf30_bx07iy2i.json"  background="transparent"  speed="1"  style="width: 200px; height: 200px;"  loop autoplay></lottie-player>
 						</center>
 						<li>
-							<a href="autres/partie2.html">Euro Truck Simulator 2 Multiplayers </a>
+							<a href="../autres/partie2.html">Euro Truck Simulator 2 Multiplayers </a>
 							<ul>
 								<li> <a href="#fb1"> Our company </a> </li>
 								<li> <a href="#fb2"> Our travels </a> </li>
