--- a/autres/partie3.html
+++ b/autres/partie3.html
@@ -42,7 +42,7 @@
 	</br>
 	</br>
 		<p>
-			<h1 id='fb1'><center>Le skateboard plus qu'un sport un mode de vie</center></h1>
+			<h1 class="logo" id='fb1'><center>Le skateboard plus qu'un sport un mode de vie</center></h1>
 		</p>
 		<p>
 			Depuis son apparition en Californie dans les années 1960, le skate est, plus qu'une discipline, un art de vivre où le vêtement joue un rôle central. Baskets techniques, pantalons larges et chemises graphiques, ce vestiaire parfaitement codifié obéit à des fondamentaux qui, en près de soixante ans, n'ont pas bougé. Echappatoire stylisée aux codes bourgeois, mouvement de liberté et de défiance ancré dans la culture urbaine des métropoles américaines, le skate et son esthétique ont fait le tour du monde et sont toujours synonymes d'une douce rébellion. Aujourd'hui, ce sont deux générations qui se rencontrent autour de cette culture : d'un côté, des stylistes comme Julien David, qui se réapproprient l'esthétique des années 1990 de leur jeunesse, de l'autre, une jeune génération de consommateurs née pendant cette même décennie qui la découvre et joue avec ses accents de liberté. (CF:<a href='https://www.lemonde.fr/m-styles/article/2015/08/24/le-skate-fait-plancher-la-mode_4730633_4497319.html'target="_blank">lemonde.fr)</a>
