--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
 	<body>
 
 		<header>
-			<a class="logo" href="../autres/Us.html"><img class="logo" src="../images/logo.png" /></a>
+			<a class="logo" href="../autres/Us.html"><img class="logo" src="../images/logo.png" />
+			</a>
+		<h>SimFan</h>
 			<nav>
 				<ul class="nav_links">
 					
