--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 		<main>
 			<header>
 				<nav>
-					<a class="logo" href="../autres/Us.html"><img class="logo" src="../images/logo.png" />
+					<a class="logo" href="./autres/Us.html"><img class="logo" src="../images/logo.png" />
 					</a>
 					<h>SimFan</h>
 					<ul class="nav_links">
@@ -24,7 +24,7 @@
 						</center>
 
 						<li>
-							<a href="../index.html"> Microsoft Flight Simulator 2020</a>
+							<a href="./index.html"> Microsoft Flight Simulator 2020</a>
 							<ul>
 								<li><a href="#fb1"> Airbus A320 </a></li>
 								<li><a href="#fb2"> Airbus A330 </a></li>
@@ -39,7 +39,7 @@
 						</center>
 
 						<li>
-							<a href="../autres/partie2.html">Euro Truck Simulator 2 Multiplayers </a>
+							<a href="./autres/partie2.html">Euro Truck Simulator 2 Multiplayers </a>
 							<ul>
                          		<li><a href="#fb1"> Our company </a></li>
                             	<li><a href="#fb2"> Our travel </a></li>
@@ -57,14 +57,14 @@
 		
 		<section class="new">
 			<div class="news">
-				<img src="../images/FS20.png"/>
+				<img src="./images/FS20.png"/>
 				<div class="news_info">
 					<p class="news_top"> The News </p>
 					<p class="news_botom"> What happend recently </p>
 				</div>
 			</div>
 			<div class="news">
-				<img src="../images/petou.png"/>
+				<img src="./images/petou.png"/>
 				<div class="news_info">
 					<p class="news_top"> Our YouTube Chanel </p>
 					<p class="news_botom"> Check out our recently videos </p>
