--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 		<main>
 			<header>
 				<nav>
-					<a class="logo" href="./autres/Us.html"><img class="logo" src="../images/logo.png" />
+					<a class="logo" href="./autres/Us.html"><img class="logo" src="./images/logo.png" />
 					</a>
 					<h>SimFan</h>
 					<ul class="nav_links">
